# corprag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  corporate-ner.code-workspace  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_users.py  0002_create_chainlit_threads.py  0003_chainlit_auto_collapse.py
apps/web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: App.jsx  main.jsx
docs/: PILOT_REFACTOR_MASTER_PLAN.md  agent_ui_migration_strategy.md  answers.csv  aws_deployment_proposal.md
src/corporate_rag/: cli.py  logger.py  settings.py
src/corporate_rag/agents/: api.py  catalog.py  chainlit_app.py  data_layer.py  handoff.py  model.py  session.py  tool_output.py
src/corporate_rag/app/: dependencies.py  health.py  main.py
src/corporate_rag/auth/: __init__.py  models.py  password.py  repository.py  router.py  tokens.py
src/corporate_rag/corporate_agent/: agent.py  citations.py  mcp.py  prompt.py  repository.py  tools.py
src/corporate_rag/db/: __init__.py  session.py
src/corporate_rag/documents/: models.py  repository.py  router.py
src/corporate_rag/evidence/: models.py  repository.py  router.py
src/corporate_rag/facets/: models.py  repository.py  router.py
tests/unit/: __init__.py  auth_helpers.py  test_agent_api.py  test_agent_architecture.py  test_auth.py  test_cli.py  test_document_api.py  test_health.py  test_law_citations.py  test_neo4j_client.py  test_settings.py  test_workflow_api.py  test_workflow_catalog.py  test_workflow_engine.py  test_workflow_models.py  test_workflow_query_layer.py  test_workflow_serializers.py
(+110 files in other folders)
