[project]
name = "corporate-rag"
version = "0.1.0"
description = "Monolithic Corporate RAG application for graph workflows and agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "chainlit>=2.11.1",
    "deepagents>=0.6.2",
    "fastapi>=0.136.1",
    "greenlet>=3.5.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "mcp>=1.12.0",
    "neo4j>=6.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "typer>=0.25.0",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "mypy>=1.19.0",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[project.scripts]
corporate-rag = "corporate_rag.cli:main"
corporate-rag-corporate-mcp = "corporate_rag.corporate_agent.mcp:main"
corporate-rag-law-mcp = "corporate_rag.law_agent.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corporate_rag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["corporate_rag"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75

[tool.ruff.lint.per-file-ignores]
"src/corporate_rag/corporate_agent/prompt.py" = ["E501"]
"src/corporate_rag/law_agent/prompt.py" = ["E501"]
